# CDS-A5

./: .gitignore  BWT_inverse_lf  BWT_inverse_movelet  CMakeLists.txt  build  example.txt  example2.txt  lf  load  movelet
src/: BWT_inverse_lf.cpp  BWT_inverse_movelet.cpp  README.md  build.cpp  deserialize.cpp  deserialize.hpp  lf.cpp  lf_movelet.cpp  movelet_lf.cpp
